<resources>
    <string name="app_name">Calculador De Gorjeta</string>
    <string name="hint">Digite o valor da conta ex: 36.50</string>
    <string name="seekBar">0%</string>
    <string name="gorjeta">Gorjeta</string>
    <string name="total">Total</string>
    <string name="viewGorjeta">R$0</string>
    <string name="viewTotal">R$0</string>
    <string name="toast">Você esqueceu o valor da conta</string>

</resources>